[Plugin Hub] Attempt to fix nowrap+scroll issue

--- a/app/_assets/stylesheets/pages/extension.less
+++ b/app/_assets/stylesheets/pages/extension.less
@@ -610,7 +610,9 @@ table {
       }
 
       .default {
-        overflow-x: scroll;
+        code {
+          white-space: pre-wrap;
+        }
       }
 
       code {
